--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-    google-site-verification: google74a1e6b1eb015182.html
+    
+    <meta name="google-site-verification" content="55cnZP9ka-UMPr8MVCTnS9-wfKvJ1Gz2VvOwKFIkXd0" />
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>اختبر معلوماتك العامة</title>
